Fixed mobile "jumping" of multiselect

--- a/src/components/MultipleSelect/multiple-select.css
+++ b/src/components/MultipleSelect/multiple-select.css
@@ -5,3 +5,13 @@
   font-size: .75rem !important;
   font-weight: normal !important;
 }
+
+@media screen and (max-width: 1000px) {
+  .paperManager {
+    top: 387px !important;
+  }
+
+  .paperAdmin {
+    top: 446px !important;
+  }
+}
